syntax = "proto3";

package pb;

option go_package = "github.com/ymanshur/synasishouse/pb";

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  bool is_success = 1;
}
