syntax = "proto3";

package pb;

option go_package = "github.com/ymanshur/synasishouse/pb";

message GetProductRequest {
  string id = 1;
}
